bare bones tabbing navigation for restaurant project

--- a/src/template.html
+++ b/src/template.html
@@ -6,6 +6,19 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <nav id="nav">
+        <div class="nav-button-wrapper">
+            <button id="home">Home</button>
+            <button id="menu">Menu</button>
+            <button id="contact">Contact</button>
+        </div>
+    </nav>
+    <div id="content"></div>
+
+    <footer>
+        <div class="footer-wrapper">
+            <p>Copyright &copy; 2025</p>
+        </div>
+    </footer>
 </body>
 </html>
